src/main/java/semantic/abstractSintaxTree/test/failing/selfAccessInVoid.ru
start {
    Int x;
    self.x;
}